2004-11-30  Bastien Nocera  <hadess@hadess.net>

	* gnome-settings-multimedia-keys.c: (do_exit_action): hack
	to get the logout action working (Closes: #141472)

2004-11-27  Sergey V. Udaltsov  <svu@gnome.org>

	* gnome-settings-keyboard-xkb.c: support for xmodmap introduced

2004-10-28  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-settings-xrdb.c: (append_xresource_file), (apply_settings):
	Don't nuke .Xdefaults when restarting g-s-d. Patch from Nick
	Welch <mack at incise org>. Closes bug #127050.

2004-10-21  Sebastien Bacher  <seb128@debian.org>

	* gnome-settings-default-editor.c: (vfs_change_cb):
	* gnome-settings-font.c: (load_cursor):
	* gnome-settings-gtk1theme.c: (apply_settings):
	* gnome-settings-keyboard.c: (apply_settings):
	* gnome-settings-multimedia-keys.c: (init_kbd):
	* gnome-settings-xsettings.c: (gnome_settings_xsettings_load):
	patch by Thomas Cataldo <thomas.cataldo@aliacom.fr> to fix a bunch of 
	memory leaks (Closes: #150145).

2004-10-14  Jody Goldberg <jody@gnome.org>

	* Release 2.8.1

2004-09-29  Bastien Nocera  <hadess@hadess.net>

	* gnome-settings-multimedia-keys.c: (dialog_show): rework the
	dialog_show so that the dialog is moved before it's shown, and
	use gdk_display_sync() instead of a event looping to avoid
	"reentrancy" problems when showing/hiding the dialog in fast
	successions (Closes: #144490)

2004-09-29  Bastien Nocera  <hadess@hadess.net>

	* actions/acme-volume-gstreamer.c: (acme_volume_gstreamer_init):
	better way to look for the volume track (patch by Michal Bukovjan
	<bukovjan@mbox.dkm.cz>) (Closes: #153866)

2004-09-27  Sergey V. Udaltsov  <svu@gnome.org>

	* gnome-settings-keyboard-xkb.c: fix one GSwitchItXkbConfig memory
	leak, spotted by kmaraas.

2004-08-30  Carlos Garnacho Parro  <carlosg@gnome.org>

	* gnome-settings-multimedia-keys.c: applied patch from Pierre Ossman
	<drzeus-bugzilla@drzeus.cx> to display the volume dialog in the
	correct place. Fixes #144490
